# gradio-svelteflow

./: .geminiignore  .gitignore  .gitmodules  CHANGELOG.md  README.md  package.json  pyproject.toml  run.sh
.devcontainer/: Dockerfile  devcontainer.json
.gemini/: settings.json
.github/workflows/: release.yml
gradio-svelteflow/svelteflow/: README.md  pyproject.toml
gradio-svelteflow/svelteflow/demo/: app.py  requirements.txt
gradio-svelteflow/svelteflow/frontend/: package-lock.json  package.json
shared-graph-ui/: .gitignore  GraphUI.svelte  package.json
shared-graph-ui/styles/: theme.css
shared-graph-ui/types/: schemas.ts
svelteflow/: .gitignore  README.md  pyproject.toml
svelteflow-app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.js.timestamp-1763420131247-67f2d9e081fba8.mjs
svelteflow-app/docs/: api.md  architecture.md  development.md  example_usage.md  features.md
svelteflow-app/src/: App.svelte  CustomNodeData.ts  main.js
svelteflow-app/src/components/: CustomEdge.svelte  CustomNode.svelte  EdgeEditPopup.svelte  NodeEditPopup.svelte
svelteflow-app/src/graph/: GraphUI.svelte
svelteflow-app/src/routes/: CanvasLayout.svelte  ControlledState.svelte  EditingPopups.svelte  GridVirtualization.svelte  Home.svelte  LargeGraph.svelte  LayoutEngines.svelte  Minimal.svelte  MultipleInstances.svelte  ProgrammaticCreation.svelte  ToolbarFeatures.svelte  ToolbarVisibility.svelte  ZoomToNode.svelte
svelteflow-app/src/stores/: highlightStore.ts
svelteflow-app/src/styles/: theme.css
svelteflow-app/src/types/: NodeData.ts  schemas.ts
svelteflow-app/src/utils/: layout.ts
svelteflow/demo/: app.py
svelteflow/frontend/: CustomNode.svelte  CustomNodeData.ts  DynamicHandlesNode.svelte  DynamicNodeData.ts  Example.svelte  Index.svelte  main.ts  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
(+61 files in other folders)
